--- a/mod/SConscript
+++ b/mod/SConscript
@@ -53,6 +53,9 @@ def local_build():
                  'mu2e_MCDataProducts',
                  'mu2e_RecoDataProducts',
                  'mu2e_DataProducts',
+                 'mu2e_ProditionsService',
+                 'mu2e_DbService',
+                 'mu2e_DbTables',
                  'mu2e_CaloMC',
                  'mu2e_BTrkData',
                  babarlibs,
