--- a/mod/SConscript
+++ b/mod/SConscript
@@ -2,7 +2,7 @@
 #
 # Script to build the files found in this directory.
 #------------------------------------------------------------------------------
-import os
+import os, subprocess
 Import('stntuple_env')
 Import('stntuple_helper')
 #------------------------------------------------------------------------------
@@ -28,8 +28,26 @@ def local_build():
 
     script  = '#Stntuple/scripts/create_print_header_routine.sh';
     helper.do_codegen(cc_file,script);
-
-    helper.handle_dictionaries();
+#------------------------------------------------------------------------------
+# work around a bug in fhiclcpp 4.19.00-4.19.01:
+# don't generate the ROOT dictionary for MuHitDisplay module for those versions
+#------------------------------------------------------------------------------
+    cmd = "spack find fhicl-cpp | grep fhicl-cpp | awk -F @ '{print $2}'"
+    p = subprocess.Popen(cmd,
+                         executable="/bin/bash",
+                         shell=True,
+                         stderr=subprocess.PIPE,
+                         stdout=subprocess.PIPE,
+                         encoding="utf-8")
+    (out, err) = p.communicate();
+    fhiclcpp_ver=out.strip();
+    # print(f'out_2:{out} len(out):{len(out)} fhiclcpp_ver:{fhiclcpp_ver}')
+    
+    skip_dicts = []
+    if (fhiclcpp_ver == '4.19.00') or (fhiclcpp_ver == '4.19.01'):
+        skip_dicts.append('MuHitDisplay_module_linkdef.h')
+        
+    helper.handle_dictionaries(skip_list=skip_dicts);
 
     libs     = [ 'Stntuple_print',
                  'Stntuple_val',
@@ -64,7 +82,6 @@ def local_build():
                  'art_Framework_Principal',
                  'art_Framework_Services_Registry',
                  'art_root_io_tfile_support',
-                 # 'art_root_io_TFileService_service',
                  'art_root_io_TFileService',
                  'art_Persistency_Provenance',
                  'art_Persistency_Common',
@@ -95,7 +112,7 @@ def local_build():
     # print "2. Stntuple/mod: skip_list:",skip_list
 
     helper.build_libs   (list_of_cc_files,skip_list,libs)
-    helper.build_modules(list_of_modules ,[]       ,libs)
+    helper.build_modules(list_of_modules ,[]       ,skip_dict_list=skip_dicts,libs=libs)
 #------------------------------------------------------------------------------
 local_build();
 
